# hackathon-biofy

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
bot-wpp/: .env-example  Dockerfile  fly.toml  pyproject.toml
bot-wpp/src/: main.py  utils.py
bot-wpp/src/routes/: webhook.py
bot-wpp/tests/: conftest.py  test_webhook.py
flagged/: log.csv
models/: model_labels.pkl
src/: model.py  scores.py
src/api/: main.py  schemas.py  utils.py
src/failed/: data_loader.py  main.py  mnist.py  test_crop.py  utils.py
streamlit-app/: Dockerfile  Pathogenic-Finder.py  fly.toml  pyproject.toml
web-page/: index.html  javascript.js  style.css
