[tool.poetry]
name = "hackathon-biofy"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.5.1"
torchvision = "0.6.1"
scikit-learn = "0.23.2"
pytorch-model-summary = "^0.1.2"
efficientnet-pytorch = "^0.7.1"
pandas = "1.0.5"
numpy = "1.19.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
