[tool.poetry]
name = "wpp-bot"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.4"
httpx = "^0.26.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.1.11"
taskipy = "^1.12.2"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload"
test = "pytest -vv"
format = "isort src && isort tests && ruff format src && ruff format tests"